# itmo-ics

./: .env.example  README.md  pm2.json  pyproject.toml
app/: __main__.py  settings.py
app/db/: __init__.py
app/db/db_user/: user_func.py  user_models.py
app/dialogs/: dialogs.py  router.py  states.py  universal_func.py
app/dialogs/windows/login/: auth.py  func.py  login.py
app/dialogs/windows/menu/: func.py  menu.py  my_itmo.py
migrations/models/: 0_20230921144131_init.py
tests/: test_auth.py  test_calendar.py
