[tool.poetry]
name = "itmo-ics"
version = "0.1.0"
description = ""
authors = ["Artem <artem00561@gmail.com>"]
readme = "README.md"
packages = [{include = "itmo_ics"}]

[tool.poetry.dependencies]
python = "^3.10"
redis = "^5.0.0"
tortoise-orm = "^0.20.0"
aiogram-dialog = {version = "^2.0.0", allow-prereleases = true}
coloredlogs = "^15.0.1"
requests = "^2.31.0"
aerich = "^0.7.2"
python-dateutil = "^2.8.2"
ics = "^0.7.2"
pydantic = {extras = ["dotenv"], version = "^2.3.0"}
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
